# dbt-fix-agent-py

./: .gitignore  README.md  pyproject.toml
src/dbt_fixer/: _numeric.py  agent.py  allowlist.py  applier.py  bounds.py  dbt_parse.py  delivery_common.py  diffing.py  diffparse.py  entrypoint.py  env.py  fix_pipeline.py  intake.py  model_output.py  pathsafe.py  pipeline.py  proposal.py  reaudit.py  refuter.py  retry_loop.py  runners.py  secrets.py  slack_delivery.py
src/dbt_fixer/tools/: repo_tools.py
tests/: test_agent.py  test_allowlist.py  test_applier.py  test_bounds.py  test_dbt_parse.py  test_diffing.py  test_diffparse.py  test_entrypoint.py  test_env.py  test_fix_pipeline.py  test_intake.py  test_model_output.py  test_no_github_write_path.py  test_numeric.py  test_pathsafe.py  test_pipeline.py  test_proposal.py  test_readme_env_contract.py  test_reaudit.py  test_refuter.py  test_repo_tools.py  test_retry_loop.py  test_slack_delivery.py
tests/real_process/: test_diff_matches_git.py
