[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbt-fixer"
version = "0.1.0"
description = "Shadow-mode dbt Fix Agent: proposes narrowly-scoped, mechanically-gated repairs for known-red dbt Cloud CI failures and auditor-blocked PRs. Never writes to GitHub."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Cyera BI/Analytics Engineering" }]

dependencies = [
    "agno==2.6.11",
    "boto3>=1.34,<2.0",
    "slack_sdk>=3.27,<4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# By default, exclude the one real-process integration module (and any test
# anywhere else explicitly marked `real_process`) from collection. It shells
# out to a real `git` binary and/or hits the network to prove properties the
# rest of the (fully offline) suite cannot -- see tests/real_process/ and the
# README's "Running the tests" section. Run it explicitly with:
#   pytest -m real_process tests/real_process
addopts = "-m 'not real_process'"
markers = [
    "real_process: allows real subprocess/network access in this test module (exempt from the offline-only conftest guard, and excluded from collection by default -- see addopts above).",
]
